@@ -59,7 +59,7 @@ libspectrum_la_SOURCES = bzip2.c \
 
 libspectrum_la_LDFLAGS = -version-info 6:0:1 -no-undefined
 
-libspectrum_la_LIBADD = myglib/libmyglib.la @AUDIOFILE_LIBS@ -lm
+libspectrum_la_LIBADD = @AUDIOFILE_LIBS@ -lm
 
 BUILT_SOURCES = libspectrum.h snap_accessors.c tape_accessors.c tape_set.c
 
